--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "salissadiq",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^3.3.8",
     "cors": "^2.8.5",
     "express": "^4.18.1",
